<resources>
    <string name="app_name">Kui</string>

    <string name="title_activity_new_question">New Question</string>
    <string name="title_activity_new_course">New Course</string>
    <string name="title_activity_course_detail">&lt;course-title&gt;</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="title_activity_courses">Courses</string>

    <string name="toast_create_course_success">Course created</string>
    <string name="toast_create_question_success">Posted successfully.</string>
    <string name="toast_create_user">User created</string>
    <string name="toast_not_connected">Connection error</string>
    <string name="toast_subscribe">You subscribed</string>
    <string name="toast_wrong_subscription_key">Wrong subscrition key</string>
    <string name="toast_already_subscribed">You already subscribed to this course</string>
    <string name="toast_unsubscribed">You unsubscribed</string>
    <string name="toast_create_course_failure">Can\'t create a new course</string>
    <string name="toast_make_a_choice">Please, make a choice!</string>
    <string name="toast_correct_answer">Correct answer!</string>
    <string name="toast_wrong_answer">Wrong answer</string>
    <string name="toast_create_question_failure">Can\'t create a question now</string>

    <string name="layout_new_course_is_public">Public</string>
    <string name="layout_new_course_toolbar_title">Create Course</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>

    <string name="text_course_detail_toolbar_subtitle">Enroll code:</string>

    <string name="hint_option_correct">Correct option</string>
    <string name="hint_option_wrong">Wrong option</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>

    <string name="button_activity_quiz_check">Check</string>
    <string name="button_activity_quiz_checking">Checking…</string>
    <string name="button_activity_quiz_continue">Continue</string>
    <string name="button_dashboard_browse">Browse new courses!</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="pager_courses_subscribed">Subscribed</string>
    <string name="pager_courses_created">Created</string>
    <string name="pager_courses_browse">Browse</string>

    <string name="nav_menu_item_courses">Courses</string>
    <string name="nav_menu_item_dashboard">Dashboard</string>
    <string name="nav_menu_section_actions">Communicate</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="nav_menu_item_logout">Logout</string>

    <string name="hello_blank_fragment">Hello</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="dialog_message_creating">Creating</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_message_subscribe">Enter Your Enroll Code</string>
    <string name="dialog_title_subscribe">Subscribe</string>
    <string name="dialog_loading">Loading</string>
    <string name="error_course_not_found">Course not found!</string>
    <string name="dialog_message_sunscribing">Subscribing</string>
    <string name="empty_dashboard_message">There are no recent questions.</string>
    <string name="empty_courses_subscribed">You are not subscribed to any course yet.</string>
    <string name="empty_courses_created">You are not created any courses yet.</string>
    <string name="empty_courses_browse">There no browsable courses.</string>
    <string name="empty_questions_message">There are no questions for this course yet.</string>
    <string name="action_share">Share</string>
    <string name="chooser_share">Share</string>
    <string name="content_share" formatted="false">Check out this awesome quiz on Kui! Code: %s</string>
    <string name="title_activity_answers">AnswersActivity</string>
    <string name="section_answers">Answers</string>
</resources>
