<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/nav_menu_item_dashboard" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_courses"
            android:title="@string/nav_menu_item_courses" />

        <item android:title="@string/nav_menu_section_actions">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/nav_menu_item_logout" />
            </menu>
        </item>
    </group>
</menu>
