<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Switchandroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_horizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="com.mertkasar.kui.NewCourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:hint="@string/hint_title"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/is_public_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/layout_new_course_is_public" />

    </LinearLayout>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine" />

</LinearLayout>
